--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "socket.io-client": "^4.8.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
+    "vaul": "^1.1.2",
     "zod": "^4.1.5"
   },
   "devDependencies": {
