--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "cookies-next": "^6.1.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.541.0",
-    "next": "15.5.0",
+    "next": "^16.0.7",
     "next-cloudinary": "^6.16.0",
     "next-pwa": "^5.6.0",
     "next-themes": "^0.4.6",
@@ -54,7 +54,7 @@
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
-    "eslint-config-next": "15.5.0",
+    "eslint-config-next": "15.5.7",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.12",
     "tw-animate-css": "^1.3.7",
